<resources>
    <string name="app_name">Drawing</string>
    <string name="color_red">红色</string>
    <string name="color_orange">橙色</string>
    <string name="color_yellow">黄色</string>
    <string name="color_green">绿色</string>
    <string name="color_bg">青色</string>
    <string name="color_blue">蓝色</string>
    <string name="color_purple">紫色</string>
    <string name="color_black">黑色</string>
    <string name="color_gray">灰色</string>
    <string name="width_1">细</string>
    <string name="width_2">较细</string>
    <string name="width_3">中</string>
    <string name="width_4">较粗</string>
    <string name="width_5">粗</string>
    <string name="alpha">透明度</string>
    <string name="alpha_10">10%</string>
    <string name="alpha_30">30%</string>
    <string name="alpha_50">50%</string>
    <string name="alpha_70">70%</string>
    <string name="alpha_100">100%</string>

</resources>
